# AStar-DCO

./: .gitignore  ASearch.pro  CMakeLists.txt  Compare.h  FakeMap.cpp  FakeMap.h  IOpenContainer.cpp  IOpenContainer.h  OConteiner.cpp  OConteiner.h  OList.cpp  OList.h  OPriorityQueue.cpp  OPriorityQueue.h  OSet.cpp  OSet.h  OVctList.cpp  OVctList.h  OVctProirityQueue.cpp  OVctProirityQueue.h  OVctSet.cpp  OVctSet.h  README.md  astar.cpp  astar.h  config.cpp  config.h  dijkstra.cpp  dijkstra.h  example.xml  example_log.xml  gl_const.h  isearch.cpp  isearch.h  main.cpp  map.cpp  map.h  mission.cpp  mission.h  node.h  (+1 more)
RESULTS/: BeldursGate_log.xml  Mazes1_log.xml  Mazes2_log.xml  Mazes4_log.xml  Moscow_log.xml  Starcraft_log.xml  Warcraft_log.xml
